# TRSFX

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: format.yml  publish.yml
TRSFX/: __init__.py
TRSFX/_utils/: __init__.py  h5_io.py  list_io.py  stream_io.py
TRSFX/compare/: __init__.py  cli.py  hd5_corr.py
TRSFX/explore/: __init__.py  _indexing_related.py  cli.py  indexing_related.py  stream.py
TRSFX/indexer/: __init__.py  _configs.py  _utils.py  cli.py  crystfel_detector.py  crystfel_gridsearch.py  crystfel_indexing.py  crystfel_merging.py  crystfel_stats.py
TRSFX/manipulation/: __init__.py  cli.py  crystfel_to_meteor.py  sample_stream.py  stream.py
docs/: conf.py  index.rst  requirements.txt
docs/TRSFX/: compare.rst  explore.rst  index.rst  manipulation.rst
docs/psi_utils/: compare.rst  manipulation.rst
docs/vignettes/: compare.md  explore.md  included.md  index.md  manip.md
psi_utils/compare/: __init__.py  cli.py  map_correlation.py
psi_utils/manipulation/: __init__.py  phenix_to_meteor.py
