[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-utils"
version = "0.1.0"
description = "Crystallographic Utilities from the Standfuss group out of PSI"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"

authors = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]

maintainers = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

dependencies = [
    "storageCat>=1.0.2",
    "hatTrick>=0.2.1",
    "meteor-maps>=0.4.0"
]

[project.urls]
repository = "https://github.com/ryan-odea/psi-utils"

