[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TRSFX"
version = "0.3.0"
description = "Crystallographic Utilities from the Standfuss group out of PSI"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]

maintainers = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

dependencies = [
    "storageCat>=1.0.2",
    "hatTrick>=0.2.1",
    "meteor-maps>=0.4.0",
    "reciprocalspaceship>=1.0.7",
    "click>=8.3.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "gemmi>=0.7.3",
    "natsort>=8.4.0",
    "pandas>=2.3.3",
    "submitit>=1.5.1",
    "h5py>=3.11.0",
    "hdf5plugin>=6.0.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "pytest",
    "myst-parser",
    "piccolo_theme",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints"
]

[project.urls]
repository = "https://github.com/ryan-odea/TRSFX"

[project.scripts]
"sfx.manip" = "TRSFX.manipulation.cli:cli"
"sfx.compare" = "TRSFX.compare.cli:cli"
"sfx.explore" = "TRSFX.explore.cli:cli"
"sfx.index" = "TRSFX.indexer.cli:cli"

